--- a/app/views/admin/admins/index.html.erb
+++ b/app/views/admin/admins/index.html.erb
@@ -1,30 +1,40 @@
 
- <table class='table table-hover table-inverse'>
-  <thead>
-   <tr>
-    <th>ID</th>
-    <th>名前</th>
-    <th>メールアドレス</th>
-    <th>退会ステータス</th>
-    <th>編集ボタン</th>
-   </tr>
-  </thead>
- <% @user.each do |user| %>
- <tbody>
-  <tr>
-  <td><%= user.id %></td>
-  <td><%= user.name %></td>
-  <td><%= user.email %></td>
-  <td>
-  <% if user.is_deleted == false %>
-  <b class="text-success">有効ユーザー</b>
-  <% else %>
-  <b class="text-secondary">退会ユーザー</b>
-  <% end %>
-  </td>
-  <td>
-  <%= link_to "会員情報を編集する", edit_admin_path(user.id)  %>
-  </td>
-  </tr>
-   <% end %>
-</table>
+<!--アドミンページ会員一覧の閲覧-->
+
+<div class="row my-3">
+  <div class="col-1"></div>
+  <div class="col-10">
+  <h3 class="css_font title my-3">会員一覧</h3>
+  <table class='table'>
+    <thead class="thead-light">
+      <tr>
+        <th class="css_font">ID</th>
+        <th class="css_font">名前</th>
+        <th class="css_font">メールアドレス</th>
+        <th class="css_font">退会ステータス</th>
+        <th></th>
+      </tr>
+    </thead>
+    <% @user.each do |user| %>
+    <tbody>
+      <tr>
+        <td class="css_font"><%= user.id %></td>
+        <td class="css_font"><%= user.name %></td>
+        <td class="css_font"><%= user.email %></td>
+        <td>
+        <% if user.is_deleted == false %>
+        <b class="text-success css_font">有効ユーザー</b>
+        <% else %>
+        <b class="text-secondary css_font">退会ユーザー</b>
+        <% end %>
+        </td>
+        <td class="css_font">
+        <%= link_to "会員情報を編集する", edit_admin_path(user.id), class:'btn btn-outline-secondary'  %>
+        </td>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
+  </div>
+  <div class="col-1"></div>
+</div>
