--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,9 @@
 
     <main>
    <div class="container">
+     <!--<div class="row justify-content-center my-3">-->
     <%= yield %>
+     <!--</div>-->
    </div>
     </main>
 
