--- a/app/views/user/songs/edit.html.erb
+++ b/app/views/user/songs/edit.html.erb
@@ -1,34 +1,38 @@
-<h1>song edit</h1>
+<h1 class="css_font">楽曲編集</h1>
 
+<div class="css_font">
   <%= form_with model: @song do |f| %>
-  
-    <h4>title</h4>
-      <%= f.text_field :name %>
-      
-    <h4>artist</h4>
-      <%= f.text_field :artist %>
-      
-    <h4>tuning</h4>
-      <%= f.text_field :tuning %>
-      
-    <h4>Capo</h4>
-      <%= f.text_field :capo %>
-      
-    <h4>BPM</h4>
-      <%= f.text_field :bpm %>
-      
-    <h4>tonic</h4>
-      <%= f.text_field :tonic %>
-      
-    <h4>chord&lyric</h4>
-      <%= f.text_area :chord ,size: "100x50" %>
-      
-    <h4>status</h4>  
-    <%= f.radio_button :is_opened, false, checked:false %>close
-    <%= f.radio_button :is_opened, true %>open
+    <h4 class="css_font">公開ステータス</h4>  
+      <%= f.radio_button :is_opened, false%>close
+      <%= f.radio_button :is_opened, true %>open
     
-    <h4>secret_word</h4>
-    <%= f.text_field :secret_word %>
-      
+    <h4 class="css_font">曲名</h4>
+      <%= f.text_field :name, placeholder: "曲名" %>
+    
+    <h4 class="css_font">アーティスト</h4>
+      <%= f.text_field :artist, placeholder: "アーティスト" %>
+    
+    <h4 class="css_font">ジャンル</h4>
+      <%= f.select :genre_id, options_from_collection_for_select(@genre, :id, :name, @song.genre_id), { include_blank: "--選択してください--" } %>
+    
+    <h4 class="css_font">チューニング</h4>
+      <%= f.text_field :tuning, placeholder: "チューニング" %>
+    
+    <h4 class="css_font">Capo</h4>
+      <%= f.text_field :capo, placeholder: "Capo" %>
+    
+    <h4 class="css_font">BPM</h4>
+      <%= f.text_field :bpm, placeholder: "BPM" %>
+    
+    <h4 class="css_font">キー</h4>
+      <%= f.text_field :tonic, placeholder: "曲のキー"%>
+    
+    <h4 class="css_font">合言葉</h4>
+      <%= f.text_field :secret_word, placeholder: "合言葉" %>
+    
+    <h4 class="css_font">コード進行/歌詞</h4>
+      <%= f.text_area :chord ,size: "100x50", placeholder: "コード進行/歌詞" %>
+    
     <%= f.submit '投稿' %>
   <% end %>
+</div>
