--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,5 +1,5 @@
 <p class="text-center">
-<%= image_tag 'about.png' %>
+<%= image_tag 'top.png', size: '1000x600' %>
 </p>
 
  <% if admin_signed_in? %> 
