--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -24,15 +24,15 @@
     <table class="table">
       <thead class="thead-light">
         <tr>
-        <th class="css_font", align="center">ジャンル</th>
+        <th class="css_font text-center">ジャンル</th>
         <th></th>
         </tr>
       </thead>
       <% @genres.each do |genre| %>
       <tbody>
         <tr>
-        <td class="align-middle css_font ", width="50%", align="center" ><%= genre.name %></td>
-        <td class="css_font", width="50%", align="center"><%=link_to "ジャンル編集", edit_genre_path(genre.id), class:'btn btn-outline-secondary' %></td>
+        <td class="align-middle css_font " width="50%" align="center" ><%= genre.name %></td>
+        <td class="css_font" width="50%" align="center"><%=link_to "ジャンル編集", edit_genre_path(genre.id), class:'btn btn-outline-secondary' %></td>
         </tr>
       </tbody>
       <% end %>
