--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,10 +1,14 @@
-<p class="text-center">
-<%= image_tag 'about_logo.png' %>
 
-<h1 class="css_font">BeChordsとは</h1>
-<h3 class="css_font">作曲時に使えるメモツールアプリです。</h3>
-<h5 class="css_font">作曲に必要なコード進行や歌詞を保存しておくことが出来ます。</h5>
-<h5 class="css_font">自分のメモ用・演奏メンバーとの共有用・ライブでの閲覧用など様々な用途でお使いいただけます。</h5>
-</p>
+<!--アバウトページ-->
 
-
+<div class="row my-3">
+  <div class="col-2"></div>
+  <div class="col-8">
+    <div class="text=center"><%= image_tag 'newlogo.png', class: "w-100" %></div>
+    <h2 class="css_font">BeChordsとは</h1>
+    <h4 class="css_font">作曲時に使えるメモツールアプリです。</h3>
+    <h6 class="css_font">作曲に必要なコード進行や歌詞を保存しておくことが出来ます。</h5>
+    <h6 class="css_font">自分のメモ用・演奏メンバーとの共有用・ライブでの閲覧用など様々な用途でお使いいただけます。</h5>
+  </div>
+  <div class="col-2"></div>
+</div>
