--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,22 +1,19 @@
-<p class="text-center">
-<%= image_tag 'top.png', size: '1000x600' %>
-</p>
 
- <% if admin_signed_in? %> 
- <!--adminログイン状態の際に、表示したいheaderのメニューを記載-->
+<!--トップページ-->
 
-<% elsif user_signed_in? %> 
-<!--userログイン状態の際に、表示したいheaderのメニューを記載-->
-
- <p class="text-right css_font">
- <%= link_to guest_search_path,class: 'text-secondary' do %>合言葉お持ちの方はこちら>>︎<% end %>
- </p>
-
- <% else %> 
-<!--adminでもuserでもログインしていない時に表示するheaderのメニューを記載-->
-
- <p class="text-right css_font">
- <%= link_to guest_search_path,class: 'text-secondary' do %>合言葉お持ちの方はこちら>>︎<% end %>
- </p>
-
- <% end %>
+<div class="my-2">
+  <div align="center">
+  <%= image_tag 'top.png', class: "w-100" %></div>
+  <div class="mt-3">
+    <% if admin_signed_in? %> 
+    <!--管理者-->
+    <p class="text-right text-danger css_font">管理者ログイン中</p>
+    <% elsif user_signed_in? %> 
+    <!--会員-->
+    <p class="text-right css_font"><%= link_to top_search_path,class: 'text-secondary' do %>合言葉お持ちの方はこちら>>︎<% end %></p>
+    <% else %> 
+    <!--非会員-->
+    <p class="text-right css_font"><%= link_to top_search_path,class: 'text-secondary' do %>合言葉お持ちの方はこちら>>︎<% end %></p>
+    <% end %>
+  </div>
+</div>
