--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,17 @@
 
+<!--フッター-->
 
-<footer class="footer mt-auto py-3" style="background-color: #EEEEEE;">
-<div class="container">
-<% if admin_signed_in? %> <!--adminログイン状態の際に、表示したいheaderのメニューを記載-->
-<span class="nes-text is-primary css_font">Admin</span>
-<% elsif user_signed_in? %> <!--userログイン状態の際に、表示したいheaderのメニューを記載-->
-<span class="nes-text is-primary css_font">Menber</span>
-<% else %><!--adminでもuserでもログインしていない時に表示するheaderのメニューを記載-->
-<span class="nes-text is-primary css_font">Guest</span>
-<% end %>
-</div>
+<footer class="footer mt-auto py-3" style="background-color: #FFFFFF;">
+  <div class="container">
+    <% if admin_signed_in? %>
+    <!--管理者-->
+    <span class="nes-text is-primary css_font">Admin</span>
+    <% elsif user_signed_in? %>
+    <!--会員-->
+    <span class="nes-text is-primary css_font">Menber</span>
+    <% else %>
+    <!--非会員-->
+    <span class="nes-text is-primary css_font">Guest</span>
+    <% end %>
+  </div>
 </footer>
