--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,90 +1,34 @@
 
+<!--ヘッダー-->
+
 <header>
   <nav class="navbar navbar-expand-lg navbar-light " style="background-color: #FFFFFF;">
     <div class="container">
-      <a class="navbar-brand" href="/"><%= image_tag 'logo.png' , size: '125x58' %></a>
+      <a class="navbar-brand" href="/"><%= image_tag 'h_newlogo.png' , size: '125x50' %></a>
       <!--ハンバーガーメニューの設定-->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+      <span class="navbar-toggler-icon"></span>
       </button>
-      
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
-
-
-      <% if admin_signed_in? %> <!--adminログイン状態の際に、表示したいheaderのメニューを記載-->
-      <li class="nav-item css_font">
-      <%= link_to admins_path,class: 'nav-link' do %>
-      Member
-      <% end %>
-      </li>
-      
-      <li class="nav-item css_font">
-      <%= link_to genres_path,class: 'nav-link' do %>
-      Genre
-      <% end %>
-      </li>
-      
-      <li class="nav-item css_font">
-      <%= link_to destroy_admin_session_path, method: :delete, class: 'nav-link text-secondary' do %>
-      Log out
-      <% end %>
-      </li>
-      
-      <% elsif user_signed_in? %> <!--userログイン状態の際に、表示したいheaderのメニューを記載-->
-      
-      <li class="nav-item css_font">
-      <%= link_to new_song_path,class: 'nav-link' do %>
-      New song
-      <% end %>
-      </li>
-      
-      <li class="nav-item css_font">
-      <%= link_to songs_path,class: 'nav-link' do %>
-      My songs
-      <% end %>
-      </li>
-      
-      <li class="nav-item css_font">
-      <%= link_to user_path(current_user.id),class: 'nav-link' do %>
-      My page
-      <% end %>
-      </li>
-      
-      <li class="nav-item css_font">
-      <%= link_to destroy_user_session_path, method: :delete, class: 'nav-link' do %>
-      Log out
-      <% end %>
-      </li>
-      
-      <% else %> <!--adminでもuserでもログインしていない時に表示するheaderのメニューを記載-->
-
-      <li class="nav-item css_font">
-      <%= link_to root_path,class: 'nav-link' do %>
-      Top
-      <% end %>
-      </li>
-
-      <li class="nav-item css_font">
-      <%= link_to about_path,class: 'nav-link' do %>
-      About
-      <% end %>
-      </li>
-
-      <li class="nav-item css_font">
-      <%= link_to new_user_registration_path,class: 'nav-link' do %>
-      Sign up
-      <% end %>
-      </li>
-
-      <li class="nav-item css_font">
-      <%= link_to new_user_session_path,class: 'nav-link' do %>
-      Sign in
-      <% end %>
-      </li>
-
-      <% end %>
-
+        <% if admin_signed_in? %>
+        <!--管理者-->
+        <li class="nav-item css_font"><%= link_to admins_path,class: 'nav-link' do %>Member<% end %></li>
+        <li class="nav-item css_font"><%= link_to genres_path,class: 'nav-link' do %>Genre<% end %></li>
+        <li class="nav-item css_font"><%= link_to destroy_admin_session_path, method: :delete, class: 'nav-link text-secondary' do %>Log out<% end %></li>
+        <% elsif user_signed_in? %>
+        <!--会員-->
+        <li class="nav-item css_font"><%= link_to new_song_path,class: 'nav-link' do %>New song<% end %></li>
+        <li class="nav-item css_font"><%= link_to songs_path,class: 'nav-link' do %>My songs<% end %></li>
+        <li class="nav-item css_font"><%= link_to user_path(current_user.id),class: 'nav-link' do %>My page<% end %></li>
+        <li class="nav-item css_font"><%= link_to destroy_user_session_path, method: :delete, class: 'nav-link' do %>Log out<% end %></li>
+        <% else %>
+        <!--非会員-->
+        <li class="nav-item css_font"><%= link_to root_path,class: 'nav-link' do %>Top<% end %></li>
+        <li class="nav-item css_font"><%= link_to about_path,class: 'nav-link' do %>About<% end %></li>
+        <li class="nav-item css_font"><%= link_to new_user_registration_path,class: 'nav-link' do %>Sign up<% end %></li>
+        <li class="nav-item css_font"><%= link_to new_user_session_path,class: 'nav-link' do %>Sign in<% end %></li>
+        <% end %>
         </ul>
       </div>
     </div>
