--- a/app/views/searches/_search.html.erb
+++ b/app/views/searches/_search.html.erb
@@ -1,9 +1,11 @@
-<%# if user_signed_in? %>
-  <div class="search_form">
-    <%= form_with url: search_path, local: true, method: :get do |f| %>
-      <%= f.text_field :word %>
 
-      <%= f.submit "検索", class: "btn btn-primary css_font" %>
-    <% end %>
+<!--合言葉検索の部分テンプレート-->
+
+<div class="search_form css_font">
+  <%= form_with url: search_path, local: true, method: :get do |f| %>
+  <%= f.text_field :word, placeholder: "合言葉を入力" %><br>
+  <div class="mt-2">
+    <%= f.submit "検索", class: "btn btn-outline-secondary css_font" %>
   </div>
-<%# end %>
+  <% end %>
+</div>
