--- a/app/views/user/users/edit.html.erb
+++ b/app/views/user/users/edit.html.erb
@@ -1,14 +1,23 @@
-<h1 class="css_font">ユーザー情報編集</h1>
 
-<div class="css_font">
-<%= form_with model: @user do |f| %>
+<!--会員ページ　会員編集-->
 
-<h4 class="css_font">name</h4>
-<%= f.text_field :name %>
-
-<h4 class="css_font">email</h4>
-<%= f.text_field :email %>
-
-<%= f.submit '登録' %>
-<% end %>
+<div class="row my-3">
+  <div class="col-4"></div>
+  <div class="col-4">
+    <h3 class="css_font title ">ユーザー情報編集</h3>
+    <div class="css_font user_edit pt-2">
+      <%= form_with model: @user do |f| %>
+      <div class="my-1">
+        <%= f.label :ユーザー名 %><br>
+        <%= f.text_field :name %><br>
+      </div>
+      <div class="my-1">
+        <%= f.label :メールアドレス %><br>
+        <%= f.text_field :email %><br>
+      </div>
+      <div class="mt-3"><%= f.submit '変更' %></div>
+      <% end %>
+    </div>
+  </div>
+  <div class="col-4"></div>
 </div>
