--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <script src="https://kit.fontawesome.com/7dc7d3c10f.js" crossorigin="anonymous"></script>
+    <!--<script src=”https://code.jquery.com/jquery-3.4.1.min.js” integrity=”sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=” crossorigin=”anonymous”></script>-->
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -22,3 +23,13 @@
       <%= render 'layouts/footer' %>
   </body>
 </html>
+
+<!--<script>-->
+<!--$(‘#bottomBtn’).on(‘click’, function() {-->
+<!--    $(‘html, body’).animate(-->
+<!--        { scrollTop: $(‘body’).get(0).scrollHeight },-->
+<!--        200 * 100 * 100,-->
+<!--        ‘linear’,-->
+<!--    );-->
+<!--});-->
+<!--</script>-->
