--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,14 +1,46 @@
 
 <!--アバウトページ-->
 
-<div class="row my-3">
+<div class="row my-5">
   <div class="col-2"></div>
   <div class="col-8">
-    <div class="text=center"><%= image_tag 'newlogo.png', class: "w-100" %></div>
-    <h2 class="css_font">BeChordsとは</h1>
-    <h4 class="css_font">作曲時に使えるメモツールアプリです。</h3>
-    <h6 class="css_font">作曲に必要なコード進行や歌詞を保存しておくことが出来ます。</h5>
-    <h6 class="css_font">自分のメモ用・演奏メンバーとの共有用・ライブでの閲覧用など様々な用途でお使いいただけます。</h5>
+    <div class="text-center"><%= image_tag 'h_newlogo.png', class: "w-100" %></div>
+    <h1 class="css_font">BeChordsとは</h1>
+    <h2 class="css_font text-success">作曲時に使えるメモツールアプリです。</h2><br>
+    <h4 class="css_font">基本機能</h4>
+    <h6 class="css_font">・歌詞/コード進行など作曲に必要な情報の記録及び編集機能</h6>
+    <h6 class="css_font">・各楽曲へコメント機能</h6>
+    <h6 class="css_font">・公開/非公開機能</h6>
+    <h6 class="css_font">・合言葉機能</h6><br>
+    <h4 class="css_font">使用用途例</h4>
+    <h6 class="css_font">・曲ネタを思いついた際のメモ</h6>
+    <h6 class="css_font">・作成した楽曲情報の公開</h6>
+    <h6 class="css_font">・バンドメンバー内での楽曲共有</h6>
+    <h6 class="css_font">・セッションやサポートメンバーへの楽曲共有（合言葉機能）</h6><br>
+    <h4 class="css_font">など、楽曲を扱う場面で使用することが出来る作曲ツールです。</h4>
+  </div>
+  <div class="col-2"></div>
+</div>
+
+<hr width="100%">
+
+<h5 class="css_font title">Administrator</h5>
+<div class="row my-3">
+  <div class="col-2"></div>
+  <div class="col-3">
+    <div class="text-center"><%= image_tag 'author_logo.png', class: "w-100" %></div>
+  </div>
+  <div class="col-5">
+    <div class="my-3">
+    <h7 class="css_font">Kawanishi Yusuke</h7>
+      <%= link_to "https://github.com/kawanishi2023",class:'text-secondary' do %><i class="fa-brands fa-github"></i><% end %>
+    </div>
+    <div class="my-3">
+      <h7 class="css_font">Minimalist</h7><br>
+      <h7 class="css_font">Guitarlist</h7><br>
+      <h7 class="css_font">Junior Developer(Ruby on rails/HTML/CSS/Javascript)</h7><br>
+    </div>
+    <h7 class="css_font">2023.4〜2023.7 DMM WEBCAMP</h7><br>
   </div>
   <div class="col-2"></div>
 </div>
