--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -9,7 +9,10 @@
       <div style="text-align: right">
         <%= link_to edit_user_path(current_user),class:'text-secondary' do %>
         <i class="fa-solid fa-pen-to-square"></i>
-      <% end %>
+        <% end %>
+        <%= link_to user_withdrawal_path, method: :patch, "data-confirm" => "本当に退会しますか？", class:'text-secondary' do %>
+        <i class="fas fa-heart-broken"></i>
+        <% end %>
       </div>
       <table class="table">
         <thead class="thead-light">
