レイアウト整理・自動スクロール実装

--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -17,7 +17,7 @@
     <h6 class="css_font">・作成した楽曲情報の公開</h6>
     <h6 class="css_font">・バンドメンバー内での楽曲共有</h6>
     <h6 class="css_font">・セッションやサポートメンバーへの楽曲共有（合言葉機能）</h6><br>
-    <h4 class="css_font">など、楽曲を扱う場面で使用することが出来る作曲ツールです。</h4>
+    <h4 class="css_font">など、楽曲を扱う場面で使用することが出来るツールです。</h4>
   </div>
   <div class="col-2"></div>
 </div>
