バリデーション整備

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -3,6 +3,7 @@
 
 <div class="row my-2">
   <div class="col-12">
+    <div class="css_font"><%= flash[:notice] %></div>
     <div align="center"><%= image_tag 'top.png', class: "w-100" %></div>
   </div>
 </div>
