--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -5,6 +5,7 @@
 <div class="row my-1">
   <div class="col-4"></div>
   <div class="col-4 genre_edit css_font">
+    <div class="css_font"><%= flash[:notice] %></div>
     <h3 class="css_font title">ジャンル一覧・追加</h3>
     <div class="pt-2">
       <%= form_with model: @genre, method: :post, local: true do |f| %>
