--- a/app/views/user/songs/edit.html.erb
+++ b/app/views/user/songs/edit.html.erb
@@ -4,6 +4,7 @@
 <div class="row my-3">
   <div class="col-3"></div>
   <div class="col-6">
+    <div class="css_font"><%= flash[:notice] %></div>
     <h3 class="css_font title my-3">楽曲編集</h3>
     <div class="css_font song">
       <%= form_with model: @song do |f| %>
